<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tvGameTitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="125dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ivPlayerContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameTitle"
        app:srcCompat="@drawable/playerone" />

    <ImageView
        android:id="@+id/ivComputer"
        android:layout_width="125dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ivComputerContentDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayer"
        app:srcCompat="@drawable/playertwo" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/tvPlayer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />

    <TextView
        android:id="@+id/tvPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tvComputer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ivRockContentDescription"
        app:layout_constraintStart_toEndOf="@+id/ivPlayer"
        app:layout_constraintTop_toBottomOf="@+id/tvGameTitle"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/ivScissors"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/ivScissorsContentDescription"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivPaper"
        app:srcCompat="@drawable/scissors" />

    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/ivPaperContentDescription"
        app:layout_constraintStart_toEndOf="@+id/ivComputer"
        app:layout_constraintTop_toBottomOf="@+id/ivRock"
        app:srcCompat="@drawable/paper" />

    <Button
        android:id="@+id/btnRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnRules"
        app:layout_constraintStart_toEndOf="@+id/ivRock"
        app:layout_constraintTop_toBottomOf="@+id/tvGameTitle" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnRestart"
        app:layout_constraintStart_toEndOf="@+id/ivRock"
        app:layout_constraintTop_toBottomOf="@+id/btnRules" />

    <Button
        android:id="@+id/btnTotals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnTotals"
        app:layout_constraintStart_toEndOf="@+id/ivPaper"
        app:layout_constraintTop_toBottomOf="@+id/btnRestart" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>